NEW APIs CREATED
